--- a/src/app/components/compra/compra.component.css
+++ b/src/app/components/compra/compra.component.css
@@ -111,3 +111,8 @@ p.text-right {
   padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
   padding-bottom: calc(var(--input-padding-y) / 3);
 }
+
+.msg-error {
+  color: #ff0000;
+  font-size: 0.8rem;
+}
