--- a/src/app/components/revendedor/revendedor.component.html
+++ b/src/app/components/revendedor/revendedor.component.html
@@ -5,21 +5,46 @@
         <div class="card-body">
           <h5 class="card-title text-center">Revendedor</h5>
           <form class="form-revendedor" [formGroup]="formRevendedor" novalidate (ngSubmit)="onSubmit()">
+            <h5 class="text-center">{{validation}}</h5>
             <div class="form-label-group">
               <label for="inputNome">Nome Completo</label>
               <input class="form-control" id="inputNome" formControlName="nome" required autofocus>
+              <div *ngIf="formRevendedor.get('nome').invalid && (formRevendedor.get('nome').dirty || formRevendedor.get('nome').touched)"
+                class="msg-error">
+                <div *ngIf="formRevendedor.get('nome').errors.required">
+                  Nome é um campo obrigatório.
+                </div>
+              </div>
             </div>
             <div class="form-label-group">
               <label for="inputCpf">CPF</label>
               <input class="form-control" formControlName="cpf" id="inputCpf" required>
+              <div *ngIf="formRevendedor.get('cpf').invalid && (formRevendedor.get('cpf').dirty || formRevendedor.get('cpf').touched)"
+                class="msg-error">
+                <div *ngIf="formRevendedor.get('cpf').errors.required">
+                  CPF é um campo obrigatório.
+                </div>
+              </div>
             </div>
             <div class="form-label-group">
               <label for="inputEmail">E-mail</label>
               <input class="form-control" formControlName="email" id="inputEmail" required>
+              <div *ngIf="formRevendedor.get('email').invalid && (formRevendedor.get('email').dirty || formRevendedor.get('email').touched)"
+                class="msg-error">
+                <div *ngIf="formRevendedor.get('email').errors.required">
+                  E-mail é um campo obrigatório.
+                </div>
+              </div>
             </div>
             <div class="form-label-group">
               <label for="inputSenha">Senha</label>
-              <input class="form-control" formControlName="senha" id="inputSenha" required>
+              <input class="form-control" formControlName="senha" id="inputSenha" type="password" required>
+              <div *ngIf="formRevendedor.get('senha').invalid && (formRevendedor.get('senha').dirty || formRevendedor.get('senha').touched)"
+                class="msg-error">
+                <div *ngIf="formRevendedor.get('senha').errors.required">
+                  Senha é um campo obrigatório.
+                </div>
+              </div>
             </div> 
             <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" [disabled]="!formRevendedor.valid">Salvar</button>
             <button class="btn btn-lg btn-registrar btn-block text-uppercase" type="button" (click)="onCancel()"> Cancelar</button>
