--- a/src/app/components/compra/compra.component.html
+++ b/src/app/components/compra/compra.component.html
@@ -23,11 +23,12 @@
             </div>
             <div class="form-label-group">
               <label for="inputValor">Valor</label>
-              <input class="form-control" type="number" min="0" value="0" step=".01" formControlName="valor" id="inputValor" required>
+              <input class="form-control" formControlName="valor" id="inputValor"
+              currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" required>
               <div *ngIf="formCompra.get('valor').invalid && (formCompra.get('valor').dirty || formCompra.get('valor').touched)"
                 class="msg-error">
                 <div *ngIf="formCompra.get('valor').invalid">
-                  Valor inválido
+                  Valor é um campo obrigatório.
                 </div>
               </div>
             </div>
@@ -80,10 +81,14 @@
                   </div>
                   <div style="display: flex;"> 
                     <div class="text-left">
-                      <span><strong>R$</strong></span>
+                      <svg class="bi bi-credit-card" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M14 3H2a1 1 0 00-1 1v8a1 1 0 001 1h12a1 1 0 001-1V4a1 1 0 00-1-1zM2 2a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2V4a2 2 0 00-2-2H2z" clip-rule="evenodd"/>
+                        <rect width="3" height="3" x="2" y="9" rx="1"/>
+                        <path d="M1 5h14v2H1z"/>
+                      </svg>
                     </div>
                     <div>
-                      <p class="text-right">{{c.valor | number : '1.2-2'}}</p>
+                      <p class="text-right">{{c.valor | currencyBrazil}}</p>
                     </div>
                   </div>
                   <div style="display: flex;"> 
@@ -105,8 +110,11 @@
                         <path d="M10 11c0 .552-.895 1-2 1s-2-.448-2-1 .895-1 2-1 2 .448 2 1z"/>
                       </svg>
                     </div>
-                    <div>
-                      <p class="card-text"> R$ {{c.cashback | number : '1.2-2'}}</p>
+                    <div *ngIf="c.cashback > 0">
+                      <p class="card-text"> {{c.cashback | currencyBrazil}}</p>
+                    </div>
+                    <div *ngIf="c.cashback == 0">
+                      <p class="card-text">R$ 0,00</p>
                     </div>
                   </div>         
                 </div>
